# dont-drop

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
backend/: PERSON.json  pyproject.toml
backend/src/: embedding_distance.py  embeddings.py  main.py  state.py  test_llm.py
frontend/: README.md  package-lock.json  package.json
frontend/src/routes/: +page.svelte
scripts/: install-hooks.sh  pre-commit
src/: embedding_distance.py
