[project]
name = "dont-drop"
version = "0.1.0"
description = "dont-drop backend service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=2.11.0",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "ty>=0.0.58",
]
